Fix URL overflow in rich links

--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -65,6 +65,7 @@ blockquote {
 
    cite {
       @apply not-italic text-black/[.72];
+      overflow-wrap: break-word;
    }
 }
 
